--- a/src/CadastroProdutos.WebApp/Views/_ViewImports.cshtml
+++ b/src/CadastroProdutos.WebApp/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using CadastroProdutos.WebApp
 @using CadastroProdutos.WebApp.ViewModels
+@using CadastroProdutos.WebApp.Extensions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
